# Web3_agent

./: .env  README.md  README_zh.md  agent_prompts.txt  app.py  client.py  crypto_price_server.py  langgraph.json  main.py  mcp.md  pyproject.toml  requirements.txt  server.py  servers_config.json  smart_contract_status_server.py  token_info_server.py
agent/: agent.py
config/: servers_config.json
services/: crypto_price_server.py  eth_balance_server.py  smart_contract_status_server.py  token_info_server.py  weather_server.py
tools/: aave_crawler.py
tools/aave_knowledge_base/docs/: aave_docs_homepage.txt
tools/aave_knowledge_base/governance/: topics.txt
