[project]
name = "web3-agent"
version = "0.1.0"
description = "This project is a web3 agent demo."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "langchain-deepseek>=0.1.3",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "langgraph-cli>=0.3.5",
    "mcp>=1.11.0",
    "openai>=1.97.0",
]
